--- a/Projekt/styles.css
+++ b/Projekt/styles.css
@@ -1,70 +1,73 @@
+/* Video background */
 #myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-  }
-
-  body {
-    color: goldenrod;
-    font-family: 'Oswald', sans-serif;
-    font-size: 16px;
-  }
-  
-.content {
-    position: fixed;
-    margin: 0;
-  }
-
-  .myContainer {
-    margin-left: 10px;
-    width: 99%;
-    height: 99vh;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
 
-  .myNavigation {
-    width: 100%;
-    height: 85%;
+/* Logo */
+.myLogo {
+  width: 430px;
+  padding: 10px;
+  margin-left: 10px;
 }
 
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  
-  li {
-    float: left;
-  }
+/* Navigation bar */
+.myNavigation a {
+  color: rgb(161, 109, 32);
+  font-size: 30px;
+  font-family: "Titillium Web", sans-serif;
+  text-decoration: none;
+  margin-left: 5px;
+  margin: 5px;
+}
+.myNavigation a:hover {
+  color: black;
+  background: goldenrod;
+}
 
-  .myNavigation a {
-    box-shadow: inset 0 0 0 0 hsl(53, 74%, 48%);
-    color: hsl(53, 74%, 48%);
-    margin: 15px;
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-  }
-  
-  .myNavigation a {
-    color: ivory;
-    font-family: 'Poppins', sans-serif;
-    font-size: 27px;
-    font-weight: 700;
-    line-height: 1.5;
-    text-decoration: none;
-  }
-
-  .myNavigation a:hover {
-    color: #fff;
-    box-shadow: inset 200px 0 0 0 hsl(53, 74%, 48%);
-  }
-
-
-footer {
+.myContent {
   text-align: center;
 }
 
+body {
+  color: goldenrod;
+  font-family: "Oswald", sans-serif;
+  font-size: 16px;
+}
+
+.content {
+  position: fixed;
+  margin: 0;
+  height: 80%;
+}
+
+.myContainer {
+  margin-left: 10px;
+  width: 99%;
+  height: 80vh;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+/* Footer */
+.myFooter {
+  height: 20vh;
+}
+footer {
+  text-align: center;
+}
 footer ul {
   list-style-type: none;
   display: flex;
@@ -72,27 +75,30 @@ footer ul {
   justify-content: center;
   gap: 2rem;
   font-size: 2rem;
-} 
-
+}
 footer a:hover {
   color: goldenrod;
 }
 
 /* GRADIENT LINE */
 .gradient {
-  background: linear-gradient(90deg, rgba(121, 92, 9, 96) 0%, rgba(2, 0, 36, 100) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(121, 92, 9, 96) 0%,
+    rgba(2, 0, 36, 100) 100%
+  );
   height: 2px;
 }
 
-.myContent {
-  text-align: left;
-}
+/* Form */
 
 form {
   width: 300px;
   float: top;
 }
-input, textarea, select {
+input,
+textarea,
+select {
   display: block;
   width: 200px;
   margin: 0px;
